// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FretWrapperStrings wrapper correct css, isHighlighted=false 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 5%;
  background-color: white;
}

<div
  className="c0"
/>
`;

exports[`FretWrapperStrings wrapper correct css, isHighlighted=true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  border: 1px solid gray;
}

<div
  className="c0"
/>
`;
